--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
     </header>
 
-    <section class="media-scroll">
+    <section class="media-scroll" hidden>
         <img src="assets/tech1.gif" alt="Tech Demo 1">
         <video src="assets/demo.mp4" alt="Demo Video"></video>
         <img src="assets/tech2.gif" alt="Tech Demo 2">
